"Added Swagger annotations to department and token controllers, and updated swagger.json file"
