# src/controllers/department.controller.js
@@ -7,8 +7,6 @@ const Department = require("../models/department.model");
 
 module.exports = {
 	list: async (req, res) => {
-		// const departments = await res.getModelList(Department)
-
 		/*
       #swagger.tags = ["Departments"]
       #swagger.summary = "List Departments"
@@ -22,6 +20,7 @@ module.exports = {
             </ul>
         `
     */
+		// const departments = await res.getModelList(Department)
 		const data = await res.getModelList(Department);
 		res.status(200).send({
 			error: false,
@@ -31,6 +30,17 @@ module.exports = {
 		});
 	},
 	create: async (req, res) => {
+		/*
+      #swagger.tags = ["Departments"]
+      #swagger.summary = "Create Department"
+      #swagger.parameters["body"] = {
+      in: "body",
+      required : true,
+      schema:{
+        name:"Test Department"
+        }
+      }
+    */
 		const data = await Department.create(req.body);
 		res.status(201).send({
 			error: false,
@@ -38,6 +48,10 @@ module.exports = {
 		});
 	},
 	read: async (req, res) => {
+		/*
+      #swagger.tags = ["Departments"]
+      #swagger.summary = "Get Single Department"
+    */
 		// const data = await Department.findById(req.params.id) //* findById arka planda findOne sorgusunu çalıştırır.
 		const data = await Department.findOne({ _id: req.params.id });
 		res.status(200).send({
@@ -46,6 +60,17 @@ module.exports = {
 		});
 	},
 	update: async (req, res) => {
+		/*
+      #swagger.tags = ["Departments"]
+      #swagger.summary = "Update Department"
+      #swagger.parameters["body"] = {
+      in: "body",
+      required : true,
+      schema:{
+        name:"Test Department"
+        }
+      }
+    */
 		const data = await Department.updateOne(
 			{ _id: req.params.id },
 			req.body,
@@ -60,6 +85,10 @@ module.exports = {
 		});
 	},
 	delete: async (req, res) => {
+		/*
+      #swagger.tags = ["Departments"]
+      #swagger.summary = "Delete Department"
+    */
 		const data = await Department.deleteOne({ _id: req.params.id });
 
 		res.status(data.deletedCount > 0 ? 204 : 404).send({
@@ -68,6 +97,10 @@ module.exports = {
 		});
 	},
 	personnels: async (req, res) => {
+		/*
+      #swagger.tags = ["Departments"]
+      #swagger.summary = "Personnels of Department"
+    */
 		const Personnel = require("../models/personnel.model");
 
 		const data = await res.getModelList(
